Fixed game ending error

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
 		</div>
 	</div>
 	<div class="ui modal" id="resultModal">
-		<i class="close icon"></i>
 		<div class="header" id="result"></div>
 		<div class="actions buttons">
-			<div class="ui red cancel button">Close</div>
+			<div class="ui red cancel button" id="closeResult">Close</div>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
